style: correction alignement carousel responsive #122

--- a/web/themes/custom/openig/scss/_responsive.scss
+++ b/web/themes/custom/openig/scss/_responsive.scss
@@ -374,6 +374,9 @@
             margin-bottom: 1rem;
         }
     }
+    .slick--optionset--agenda{
+        margin-left: 0rem !important;
+    }
 
     #block-openig-views-block-l-agenda-agenda-accueil .more-link{
         margin-top: 0rem !important;
